# backup-orchestrator

./: .gitignore  .gitmodules  orchestrator.py  pyproject.toml
docs/: Client_Setup_Guide.docx  generate_guide.js
gui/: help.md  main_window.py  theme.py
gui/models/: credential_store.py  database.py
gui/views/: clients.py  dashboard.py  history.py  schedules.py  settings.py
gui/widgets/: help_window.py  stat_card.py  status_indicator.py
gui/workers/: mqtt_worker.py
mqtt/: payloads.py  topics.py
tests/: test_credential_store.py  test_database.py  test_payloads.py
